--- a/equipe.html
+++ b/equipe.html
@@ -8,34 +8,110 @@
 <style>
 html, body { margin:0; padding:0; height:100%; }
 body { font-family:'Montserrat',sans-serif; min-height:100vh; background-color:#6b4a3a; display:flex; flex-direction:column; }
-.titre { text-align:center; font-family:'Bebas Neue',sans-serif; font-size:64px; color:#f5f1e6; letter-spacing:1px; margin:60px 20px; }
-.equipe { display:flex; flex-direction:column; gap:60px; padding-bottom:80px; width:100%; min-height:100%; }
-.membre-gauche,.membre-droite,.centre { max-width:100%; margin:auto; background-color:#f5f1e6; border-radius:30px; padding:30px; display:flex; align-items:center; gap:30px; }
-.membre-gauche{flex-direction:row; transform:translateX(-100px);}
-.membre-droite{flex-direction:row-reverse; transform:translateX(100px);}
-.centre{flex-direction:row;}
-.photo{width:180px;height:180px;background-color:#5bc0eb;border-radius:10px;overflow:hidden;flex-shrink:0;}
-.photo img{width:100%;height:100%;object-fit:cover;}
-.content h2{margin:0;font-family:'Bebas Neue',sans-serif;font-size:36px;letter-spacing:1px;color:#5a3b2e;}
-.content h3{margin:5px 0 15px;font-weight:600;font-size:18px;color:#5a3b2e;}
-.content p{margin:0;font-weight:300;font-size:16px;line-height:1.6;color:#4a4a4a;}
-.centre p{margin:5px 0 15px;font-weight:600;font-size:20px;color:#5a3b2e;}
+
+.titre {
+    text-align:center;
+    font-family:'Bebas Neue',sans-serif;
+    font-size:64px;
+    color:#f5f1e6;
+    letter-spacing:1px;
+    margin:60px 20px;
+}
+
+.equipe {
+    display:flex;
+    flex-direction:column;
+    gap:40px;
+    padding-bottom:80px;
+    width:100%;
+    align-items:center;
+}
+
+.membre-gauche, .membre-droite, .centre {
+    max-width: 900px; /* largeur max pour éviter dépassement */
+    width: 90%;       /* largeur flexible */
+    background-color: #f5f1e6;
+    border-radius:30px;
+    padding:30px;
+    display:flex;
+    align-items:center;
+    gap:30px;
+    margin:0 auto; /* centrer */
+    flex-wrap:wrap; /* permet d’éviter le dépassement sur petits écrans */
+}
+
+.membre-gauche { flex-direction: row; }
+.membre-droite { flex-direction: row-reverse; }
+.centre { flex-direction: row; justify-content:center; }
+
+.photo {
+    width: 180px;
+    height: 180px;
+    background-color: #5bc0eb;
+    border-radius:10px;
+    overflow:hidden;
+    flex-shrink:0;
+}
+
+.photo img { width:100%; height:100%; object-fit:cover; }
+
+.content h2 {
+    margin:0;
+    font-family:'Bebas Neue',sans-serif;
+    font-size:36px;
+    letter-spacing:1px;
+    color:#5a3b2e;
+}
+.content h3 {
+    margin:5px 0 15px;
+    font-weight:600;
+    font-size:18px;
+    color:#5a3b2e;
+}
+.content p {
+    margin:0;
+    font-weight:300;
+    font-size:16px;
+    line-height:1.6;
+    color:#4a4a4a;
+}
+.centre p {
+    margin:5px 0 15px;
+    font-weight:600;
+    font-size:20px;
+    color:#5a3b2e;
+}
+
+/* RESPONSIVE */
+@media (max-width:1024px){
+    .titre { font-size:50px; }
+    .membre-gauche, .membre-droite, .centre { width:95%; padding:25px; }
+    .photo { width:150px; height:150px; }
+    .content h2 { font-size:30px; }
+    .content h3 { font-size:16px; }
+    .content p { font-size:15px; }
+    .centre p { font-size:18px; }
+}
 
 @media (max-width:768px){
-    .membre-gauche,.membre-droite{flex-direction:column;text-align:center; transform:none;}
-    .photo{width:120px;height:120px;}
-    .content h2{font-size:26px;}
-    .content h3{font-size:15px;}
-    .content p{font-size:14px;}
-    .centre p{font-size:16px;}
+    .membre-gauche, .membre-droite, .centre {
+        flex-direction: column;
+        text-align: center;
+    }
+    .photo { width:120px; height:120px; }
+    .content h2 { font-size:26px; }
+    .content h3 { font-size:15px; }
+    .content p { font-size:14px; }
+    .centre p { font-size:16px; }
 }
+
 @media (max-width:480px){
-    .titre{font-size:36px;margin:40px 15px;}
-    .photo{width:100px;height:100px;}
-    .content h2{font-size:22px;}
-    .content h3{font-size:14px;}
-    .content p{font-size:13px;}
-    .centre p{font-size:14px;}
+    .titre { font-size:36px; margin:40px 15px; }
+    .photo { width:100px; height:100px; }
+    .content h2 { font-size:22px; }
+    .content h3 { font-size:14px; }
+    .content p { font-size:13px; }
+    .centre p { font-size:14px; }
 }
 </style>
 </head>
@@ -193,7 +269,9 @@ body { font-family:'Montserrat',sans-serif; min-height:100vh; background-color:#
                 <img src="images/eloan_max.jpg" alt="Eloan et Max">
             </div>
         </div>
-    <!-- ici tu colles tous tes membres comme avant -->
+    <!-- Exemple de membre -->
+    
+
     <div class="centre">
         <p>
             Et bien d’autres personnes viennent encore compléter cette équipe.<br>
@@ -207,6 +285,8 @@ body { font-family:'Montserrat',sans-serif; min-height:100vh; background-color:#
 </div>
 </body>
 </html>
+
+
 
 
 
