--- a/equipe.html
+++ b/equipe.html
@@ -28,16 +28,15 @@ body { font-family:'Montserrat',sans-serif; min-height:100vh; background-color:#
 }
 
 .membre-gauche, .membre-droite, .centre {
-    max-width: 900px; /* largeur max pour éviter dépassement */
-    width: 90%;       /* largeur flexible */
+    width: 90%;
+    max-width: 700px;
+    margin: 20px auto;
     background-color: #f5f1e6;
-    border-radius:30px;
-    padding:30px;
-    display:flex;
-    align-items:center;
-    gap:30px;
-    margin:0 auto; /* centrer */
-    flex-wrap:wrap; /* permet d’éviter le dépassement sur petits écrans */
+    border-radius: 30px;
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    gap: 20px;
 }
 
 .membre-gauche { flex-direction: row; }
@@ -285,6 +284,7 @@ body { font-family:'Montserrat',sans-serif; min-height:100vh; background-color:#
 </div>
 </body>
 </html>
+
 
 
 
