--- a/index.html
+++ b/index.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
-<html lang="fr"> 
+<html lang="fr">
 <head>
-    <meta charset="UTF-8" /> 
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Les Roues de l'Espoir</title>
     <link rel="icon" href="images/logo.png" type="image/png">
-    <title>Les Roues de l'Espoir</title> 
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
         * { box-sizing: border-box; margin:0; padding:0; }
-
-        html, body {
-            height: 100%;
-        }
-
+        html, body { height: 100%; }
         body {
             font-family: 'Bebas Neue', sans-serif;
             display: flex;
@@ -32,15 +28,6 @@
             display: flex;
             align-items: center;
             flex-wrap: wrap;
-        }
-
-        nav ul { 
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            list-style: none;
-            padding: 0;
-            margin: 0;
         }
 
         .logo img { height: 70px; width:auto; }
@@ -76,13 +63,12 @@
             box-shadow: 0 2px 6px rgba(0,0,0,0.2);
             min-width: 180px;
         }
-
         .dropdown-menu li { padding: 0; }
         .dropdown-menu a { display: block; padding: 8px 20px; font-weight: normal; color: #5a3a28; font-size: 16px; letter-spacing: 1px; }
         .dropdown:hover .dropdown-menu { display: block; }
 
-        main { flex:1; min-height:0; }
-        iframe { width:100%; height:100%; border:none; min-height:0; }
+        main { flex:1; min-height:0; display:flex; flex-direction:column; }
+        iframe { flex:1; width:100%; border:none; display:block; }
 
         /* Hamburger mobile */
         .hamburger {
@@ -112,7 +98,6 @@
         }
         .mobile-menu a { text-decoration:none; font-weight:bold; color:#5a3a28; font-size:18px; }
 
-        /* Responsive */
         @media (max-width:768px){
             .hamburger{display:flex;}
             .navbar{justify-content:flex-start;}
@@ -120,7 +105,7 @@
             .logo img{height:55px;}
         }
     </style>
-</head> 
+</head>
 <body>
     <header>
         <nav class="navbar">
@@ -168,6 +153,7 @@
     </div>
 
     <main>
+        <!-- Ici on affiche la page avec fond beige + scroll si nécessaire -->
         <iframe name="onglet" src="home.html"></iframe>
     </main>
 
@@ -179,4 +165,6 @@
     </script>
 </body>
 </html>
+
+
 
