--- a/contact.html
+++ b/contact.html
@@ -6,20 +6,125 @@
 <title>Les Roues de l'Espoir – Contact</title>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
 <style>
-html, body{margin:0;padding:0;height:100%;}
-body{background-color:#5a3a28;font-family:'Montserrat',sans-serif;min-height:100vh;display:flex;flex-direction:column;}
-.page-contact{flex:1;display:flex;flex-direction:column;align-items:center;justify-content:flex-start;gap:40px;padding:40px;width:100%;min-height:100%;}
-.carte-contact{background-color:#f4eadf;border-radius:22px;padding:35px 40px;width:90%;max-width:600px;box-shadow:0 15px 35px rgba(0,0,0,0.25);}
-.carte-contact h1{text-align:center;margin-bottom:25px;font-weight:600;}
-.identification{display:flex;flex-direction:column;margin-bottom:18px;}
-label{font-size:14px;margin-bottom:6px;}
-input,textarea{padding:12px;border-radius:12px;border:1px solid #d3c1af;background-color:#fff;font-size:14px;}
-textarea{min-height:90px;max-height:220px;resize:vertical;}
-button{margin-top:10px;padding:12px;border-radius:14px;border:none;background-color:#5a3a28;color:white;font-size:15px;font-weight:500;cursor:pointer;transition:0.25s;}
-button:hover{background-color:#7a4b34;}
-.socials{display:flex;flex-direction:column;gap:18px;}
-.socials a{display:flex;align-items:center;gap:12px;text-decoration:none;color:#f4eadf;font-weight:500;}
-.socials img{width:34px;height:34px;}
+html, body {
+    margin:0;
+    padding:0;
+    height:100%;
+}
+body {
+    background-color:#5a3a28;
+    font-family:'Montserrat',sans-serif;
+    min-height:100vh;
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+}
+
+/* conteneur principal */
+.page-contact {
+    flex:1;
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    justify-content:flex-start;
+    gap:40px;
+    padding:40px 20px;
+    width:100%;
+}
+
+/* carte de contact centrée avec max-width */
+.carte-contact {
+    background-color:#f4eadf;
+    border-radius:22px;
+    padding:35px 40px;
+    width:90%;
+    max-width:600px;
+    box-shadow:0 15px 35px rgba(0,0,0,0.25);
+    display:flex;
+    flex-direction:column;
+    gap:20px;
+}
+
+.carte-contact h1 {
+    text-align:center;
+    margin-bottom:20px;
+    font-weight:600;
+    color:#5a3a28;
+}
+
+.identification {
+    display:flex;
+    flex-direction:column;
+    margin-bottom:15px;
+}
+
+label {
+    font-size:14px;
+    margin-bottom:6px;
+    color:#5a3a28;
+}
+
+input, textarea {
+    padding:12px;
+    border-radius:12px;
+    border:1px solid #d3c1af;
+    background-color:#fff;
+    font-size:14px;
+}
+
+textarea {
+    min-height:90px;
+    max-height:220px;
+    resize:vertical;
+}
+
+button {
+    margin-top:10px;
+    padding:12px;
+    border-radius:14px;
+    border:none;
+    background-color:#5a3a28;
+    color:white;
+    font-size:15px;
+    font-weight:500;
+    cursor:pointer;
+    transition:0.25s;
+}
+
+button:hover {
+    background-color:#7a4b34;
+}
+
+/* Réseaux sociaux (optionnel si tu veux les ajouter) */
+.socials {
+    display:flex;
+    flex-direction:column;
+    gap:18px;
+    margin-top:20px;
+}
+.socials a {
+    display:flex;
+    align-items:center;
+    gap:12px;
+    text-decoration:none;
+    color:#5a3a28;
+    font-weight:500;
+}
+.socials img {
+    width:34px;
+    height:34px;
+}
+
+/* RESPONSIVE */
+@media (max-width:768px) {
+    .carte-contact { padding:25px 20px; width:95%; }
+}
+
+@media (max-width:480px) {
+    .carte-contact { padding:20px 15px; width:100%; }
+    button { font-size:14px; padding:10px; }
+    label, input, textarea { font-size:13px; }
+}
 </style>
 </head>
 <body>
@@ -45,6 +150,8 @@ button:hover{background-color:#7a4b34;}
 </main>
 </body>
 </html>
+
+
 
 
 
