--- a/equipe.html
+++ b/equipe.html
@@ -45,8 +45,10 @@ body {
     flex-wrap: wrap;
 }
 
-.membre-gauche { flex-direction: row; }
-.membre-droite { flex-direction: row-reverse; }
+.membre-gauche { flex-direction: row;
+                transform: translateX(-100px);}
+.membre-droite { flex-direction: row-reverse;
+               transform: translateX(100px);}
 .centre { flex-direction: row; justify-content:center; text-align:center; }
 
 .photo {
@@ -276,6 +278,7 @@ body {
 </div>
 </body>
 </html>
+
 
 
 
