--- a/equipe.html
+++ b/equipe.html
@@ -43,20 +43,18 @@ body {
     align-items: center;
     gap: 20px;
     flex-wrap: wrap;
-    transition: transform 0.5s ease; /* pour un effet smooth */
+    transition: transform 0.5s ease;
 }
 
 /* Décalage horizontal */
 .membre-gauche { 
     flex-direction: row; /* image à gauche, texte à droite */
-    justify-content: flex-start;
-    transform: translateX(-40px);
+    transform: translateX(-100px);
 }
 
 .membre-droite { 
     flex-direction: row-reverse; /* image à droite, texte à gauche */
-    justify-content: flex-end;
-    transform: translateX(40px);
+    transform: translateX(100px);
 }
 .centre { 
     flex-direction: row; 
@@ -294,6 +292,7 @@ body {
 </div>
 </body>
 </html>
+
 
 
 
