--- a/equipe.html
+++ b/equipe.html
@@ -45,6 +45,12 @@ body {
     flex-wrap: wrap;
     transition: transform 0.5s ease;
 }
+    .membre-gauche, .membre-droite {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    flex-wrap: nowrap; /* empêche l'image de passer au-dessus du texte */
+}
 
 /* Décalage horizontal */
 .membre-gauche { 
@@ -72,6 +78,11 @@ body {
 }
 
 .photo img { width:100%; height:100%; object-fit:cover; }
+
+.content {
+    flex: 1; /* prend tout l'espace disponible à côté de la photo */
+}
+
 
 .content h2 {
     margin:0;
@@ -117,6 +128,12 @@ body {
         transform: translateX(0); /* on annule le décalage */
         padding: 15px;
         gap: 15px;
+    }
+   
+    .membre-gauche, .membre-droite {
+        flex-direction: column;
+        flex-wrap: wrap;
+        text-align: center;
     }
 
 
@@ -292,6 +309,7 @@ body {
 </div>
 </body>
 </html>
+
 
 
 
