--- a/contact.html
+++ b/contact.html
@@ -6,39 +6,41 @@
 <title>Les Roues de l'Espoir – Contact</title>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
 <style>
+/* ===== GLOBAL ===== */
 html, body {
     margin:0;
     padding:0;
     height:100%;
+    font-family:'Montserrat',sans-serif;
+    background-color:#5a3a28;
+    color:#3a2a20;
 }
 body {
-    background-color:#5a3a28;
-    font-family:'Montserrat',sans-serif;
-    min-height:100vh;
     display:flex;
     flex-direction:column;
     align-items:center;
+    min-height:100vh;
 }
 
-/* conteneur principal */
+/* ===== CONTENEUR PRINCIPAL ===== */
 .page-contact {
     flex:1;
     display:flex;
-    flex-direction:column;
-    align-items:center;
-    justify-content:flex-start;
-    gap:40px;
+    flex-direction:row;
+    align-items:flex-start;
+    justify-content:center;
+    gap:60px;
     padding:40px 20px;
-    width:100%;
+    flex-wrap:wrap;
 }
 
-/* carte de contact centrée avec max-width */
+/* ===== CARTE FORMULAIRE ===== */
 .carte-contact {
     background-color:#f4eadf;
     border-radius:22px;
     padding:35px 40px;
-    width:90%;
-    max-width:600px;
+    width:420px;
+    max-width:90%;
     box-shadow:0 15px 35px rgba(0,0,0,0.25);
     display:flex;
     flex-direction:column;
@@ -47,7 +49,7 @@ body {
 
 .carte-contact h1 {
     text-align:center;
-    margin-bottom:20px;
+    margin:0 0 20px 0;
     font-weight:600;
     color:#5a3a28;
 }
@@ -61,15 +63,16 @@ body {
 label {
     font-size:14px;
     margin-bottom:6px;
-    color:#5a3a28;
 }
 
 input, textarea {
+    width:100%;
     padding:12px;
     border-radius:12px;
     border:1px solid #d3c1af;
     background-color:#fff;
     font-size:14px;
+    box-sizing:border-box;
 }
 
 textarea {
@@ -95,40 +98,97 @@ button:hover {
     background-color:#7a4b34;
 }
 
-/* Réseaux sociaux (optionnel si tu veux les ajouter) */
+/* ===== RESEAUX SOCIAUX ===== */
 .socials {
     display:flex;
     flex-direction:column;
     gap:18px;
     margin-top:20px;
+    align-items:flex-start;
 }
+
 .socials a {
     display:flex;
     align-items:center;
     gap:12px;
     text-decoration:none;
-    color:#5a3a28;
+    color:#f4eadf;
     font-weight:500;
 }
+
 .socials img {
     width:34px;
     height:34px;
 }
 
-/* RESPONSIVE */
+/* ===== RESPONSIVE ===== */
+@media (max-width:1024px) {
+    .page-contact {
+        gap:40px;
+    }
+    .carte-contact {
+        padding:30px 35px;
+    }
+    input, textarea { font-size:13px; }
+    button { font-size:14px; }
+}
+
 @media (max-width:768px) {
-    .carte-contact { padding:25px 20px; width:95%; }
+    .page-contact {
+        flex-direction:column;
+        align-items:center;
+        gap:30px;
+    }
+    .carte-contact {
+        width:100%;
+        max-width:400px;
+        padding:25px;
+    }
+    .socials {
+        width:100%;
+        flex-direction:row;
+        flex-wrap:wrap;
+        justify-content:center;
+        gap:18px;
+        align-items:center;
+    }
+    .socials a {
+        font-size:14px;
+        justify-content:center;
+    }
+    .socials img {
+        width:28px;
+        height:28px;
+    }
 }
 
 @media (max-width:480px) {
-    .carte-contact { padding:20px 15px; width:100%; }
-    button { font-size:14px; padding:10px; }
-    label, input, textarea { font-size:13px; }
+    .carte-contact {
+        padding:20px;
+    }
+    input, textarea {
+        font-size:13px;
+        padding:10px;
+    }
+    button {
+        font-size:14px;
+        padding:10px;
+    }
+    .socials a {
+        font-size:12px;
+    }
+    .socials img {
+        width:24px;
+        height:24px;
+    }
 }
 </style>
 </head>
 <body>
+
 <main class="page-contact">
+
+    <!-- FORMULAIRE -->
     <section class="carte-contact">
         <h1>CONTACTEZ-NOUS</h1>
         <form action="https://formspree.io/f/XXXXX" method="POST">
@@ -147,9 +207,29 @@ button:hover {
             <button type="submit">Envoyer</button>
         </form>
     </section>
+
+    <!-- RESEAUX SOCIAUX -->
+    <aside class="socials">
+        <a href="https://www.instagram.com/les.roues.de.lespoir/" target="_blank">
+            <img src="images/insta.png" alt="Instagram">
+            <span>Instagram</span>
+        </a>
+        <a href="https://www.tiktok.com/@les.roues.de.lespoir" target="_blank">
+            <img src="images/tiktok.png" alt="TikTok">
+            <span>TikTok</span>
+        </a>
+        <a href="https://www.facebook.com/people/Lesroues-Delespoir/61574372593639/" target="_blank">
+            <img src="images/facebook.png" alt="Facebook">
+            <span>Facebook</span>
+        </a>
+    </aside>
+
 </main>
+
 </body>
 </html>
+
+
 
 
 
