--- a/equipe.html
+++ b/equipe.html
@@ -103,11 +103,15 @@ body {
     .centre p { font-size:18px; }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 768px){
     .membre-gauche, .membre-droite, .centre {
         flex-direction: column;
-        transform: translateX(0);
+        transform: translateX(0); /* annule le décalage horizontal */
         text-align: center;
+        width: 90%;           /* limite la largeur à 90% du conteneur */
+        margin: 0 auto;       /* centre le bloc */
+        padding: 15px;        /* réduit un peu le padding sur mobile */
+        box-sizing: border-box; /* inclut padding dans la largeur */
     }
     .membre-droite .photo, .membre-gauche .photo { order: 0; } /* annule l'ordre sur mobile */
     .photo { width:120px; height:120px; }
@@ -118,6 +122,10 @@ body {
 }
 
 @media (max-width:480px){
+    .membre-gauche, .membre-droite, .centre {
+        width: 95%;  /* encore plus adapté pour les très petits écrans */
+        padding: 10px;
+    }
     .titre { font-size:36px; margin:40px 15px; }
     .photo { width:100px; height:100px; }
     .content h2 { font-size:22px; }
@@ -266,6 +274,7 @@ body {
 </div>
 </body>
 </html>
+
 
 
 
