Fix HTML encoding issues in equipe.html

--- a/equipe.html
+++ b/equipe.html
@@ -108,7 +108,7 @@ body {
         flex-direction: column;
         transform: translateX(0); /* annule le décalage horizontal */
         text-align: center;
-        width: 90%;           /* limite la largeur à 90% du conteneur */
+        width: 100%;           /* limite la largeur à 90% du conteneur */
         margin: 0 auto;       /* centre le bloc */
         padding: 15px;        /* réduit un peu le padding sur mobile */
         box-sizing: border-box; /* inclut padding dans la largeur */
@@ -120,6 +120,12 @@ body {
     .content p { font-size:14px; }
     .centre p { font-size:16px; }
 }
+    .equipe{
+        padding-left: 15px;
+        padding-right: 15px;
+        box-sizing: border-box;
+    }
+
 
 @media (max-width:480px){
     .membre-gauche, .membre-droite, .centre {
@@ -274,6 +280,7 @@ body {
 </div>
 </body>
 </html>
+
 
 
 
